# django-cloudflare

./: .gitignore  README.md  pyproject.toml
django_cloudflare/: __init__.py  apps.py  client.py  purge.py  settings.py  signals.py
django_cloudflare/management/commands/: __init__.py  cf_purge_all.py  cf_purge_urls.py  cf_verify_token.py
tests/: __init__.py  settings.py  test_client.py  test_commands.py  test_purge.py  test_signals.py
